<resources>
    <string name="app_name">밥머글사람</string>
    <string name="phone">Phone</string>
    <string name="gallery">Gallery</string>
    <string name="idk">IDK</string>
    <string name="button">Button</string>
    <string name="home">Home</string>
    <string name="tohome">ToHome</string>
    <string name="temp">temp</string>
    <string name="AddContact">AddIcon</string>
    <string name="temp_name">temp_name</string>
    <string name="temp_phone">temp_phone</string>
    <string name="dash">-</string>
    <string name="cancel">Cancel</string>
    <string name="toContact" />
    <string name="tag">Tag</string>
    <string name="한식">한식</string>
    <string name="edit_contact" />
    <string name="delete_contact" />
    <string name="Name">Name</string>
    <string name="중식">중식</string>
    <string name="일식">일식</string>
    <string name="양식">양식</string>
    <string name="후식">후식</string>
    <string name="디저트">디저트</string>
    <string name="기타">기타</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>