<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/top_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.example.myapplication.TopFragment"
        tools:layout="@layout/top_fragment"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/cannotFind"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:text="조건에 맞는 친구가 없어요..."
        android:textSize="22sp"
        android:fontFamily="@font/binggrae"
        android:visibility="gone"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/top_fragment"
        app:layout_constraintBottom_toTopOf="@id/TabFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <RelativeLayout
        android:id="@+id/profileRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@id/top_fragment"
        >

        <TextView
            android:id="@+id/recommend_TextView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:fontFamily="@font/binggrae"
            android:gravity="center"
            android:text="이 사람은 어때요?"
            android:textSize='24sp' />

        <LinearLayout
            android:id="@+id/recommendedImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recommend_TextView"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/ic_person" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/NameDayLL"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@id/recommendedImage"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/Name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="이성진"
                android:textSize="20sp"
                android:fontFamily="@font/binggrae"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/Day"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:fontFamily="@font/binggrae"
                android:gravity="center"
                android:text="+100일"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/TagLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/NameDayLL"
            >

            <TextView
                android:id="@+id/tagKorean"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="6dp"
                android:gravity="center"
                android:text="@string/한식"
                android:textSize="14sp"
                android:background="@drawable/circle"
                android:fontFamily="@font/binggrae"
                />

            <TextView
                android:id="@+id/tagChinese"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="6dp"
                android:gravity="center"
                android:text="@string/중식"
                android:textSize="14sp"
                android:background="@drawable/circle"
                android:fontFamily="@font/binggrae"
                />

            <TextView
                android:id="@+id/tagJapanese"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="6dp"
                android:gravity="center"
                android:text="@string/일식"
                android:textSize="14sp"
                android:background="@drawable/circle"
                android:fontFamily="@font/binggrae"
                />

            <TextView
                android:id="@+id/tagItalian"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="6dp"
                android:gravity="center"
                android:text="@string/양식"
                android:textSize="14sp"
                android:background="@drawable/circle"
                android:fontFamily="@font/binggrae"
                />

            <TextView
                android:id="@+id/tagDessert"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="6dp"
                android:gravity="center"
                android:text="@string/후식"
                android:textSize="14sp"
                android:background="@drawable/circle"
                android:fontFamily="@font/binggrae"
                />

            <TextView
                android:id="@+id/tagETC"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="6dp"
                android:gravity="center"
                android:text="@string/기타"
                android:textSize="14sp"
                android:background="@drawable/circle"
                android:fontFamily="@font/binggrae"
                />


        </LinearLayout>



        <LinearLayout
            android:id="@+id/CallAndMessageButtonLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@id/TagLinearLayout">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/binggrae"
                android:text="전화"
                android:textSize="12dp" />


            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/binggrae"
                android:text="메시지"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ifNotMindTextAndSelectTag"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/CallAndMessageButtonLinearLayout"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:fontFamily="@font/binggrae"
                android:gravity="center"
                android:text="음식이 마음에 안드시나요?"
                android:textSize="16sp"

                />

            <Spinner
                android:id="@+id/tagSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                />

        </LinearLayout>


        <Button
            android:id="@+id/searchBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="40dp"
            android:background="@color/color3"
            android:fontFamily="@font/binggrae"
            android:gravity="center"
            android:text="태그로 찾기"
            android:layout_below="@id/ifNotMindTextAndSelectTag"/>
    </RelativeLayout>




    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/TabFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.example.myapplication.TabFragment"
        tools:layout="@layout/tab_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>